Fixed scrollbar position if secondary sheet is visible

--- a/themes/claro/ColumnView.less
+++ b/themes/claro/ColumnView.less
@@ -657,6 +657,9 @@
 		top: @column-header-height + @secondary-sheet-height + 3px;
 		display: none;
 	}
+	.dojoxCalendarVScrollBar {
+		top: @sheet-top-secondary-sheet;
+	}
 }
 
 .claro .dojoxCalendarColumnView.subColumns.secondarySheet {
@@ -666,6 +669,9 @@
 	.dojoxCalendarSubHeader {
 		top: @column-header-height + @secondary-sheet-height + 3px;
 		display: block;
+	}
+	.dojoxCalendarVScrollBar {
+		top: @sheet-top-subcolumns-secondary-sheet;
 	}
 }
 
